--- a/css/styles.css
+++ b/css/styles.css
@@ -124,6 +124,20 @@ main {
 
 }
 
+.delete-btn img {
+    width: 24px;
+    height: 24px;
+    cursor: pointer;
+    object-fit: contain;
+}
+
+.delete-btn {
+    background: none;
+    border: none;
+    padding: 0;
+    margin: 0;
+}
+
 .price {
     display: flex;
     justify-content: space-between;
